# CLI-Campus

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cli_campus/: __init__.py  main.py  mcp_server.py
cli_campus/adapters/: __init__.py  bus_adapter.py  card_adapter.py  course_adapter.py  ehall_base.py  exam_adapter.py  grade_adapter.py  mock_adapter.py  seu_auth_wrapper.py  venue_adapter.py
cli_campus/adapters/vendors/: __init__.py
cli_campus/core/: __init__.py  auth.py  config.py  exceptions.py  interfaces.py  models.py  schema_export.py  sop_engine.py  yaml_engine.py
cli_campus/data/: bus_schedule.json
cli_campus/data/resources/: student_handbook.md
configs/declarative/: seu_jwc_news.yaml
docs/: adapter-protocol.md  agent-native.md  architecture.md  contributing.md  roadmap.md  sop-design.md  yaml-engine.md
scripts/: convert_pdf_to_md.py  m2m_test.py  test_venue_real.py  venue_assistant.py
sops/: morning_briefing.yaml
tests/: __init__.py  test_adapters.py  test_auth.py  test_auth_wrapper.py  test_bus_adapter.py  test_card_adapter.py  test_cli.py  test_config.py  test_course_adapter.py  test_exam_adapter.py  test_exceptions.py  test_grade_adapter.py  test_mcp_server.py  test_mcp_stdio.py  test_models.py  test_schema_export.py  test_sop_engine.py  test_venue_adapter.py  test_yaml_engine.py
