[project]
name = "cli-campus"
version = "0.1.0"
description = "Agent-Native Campus Toolkit — 校园数字基建的系统调用与 Agent-Native 底层武器库"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "keyring>=24.0.0",
    "httpx>=0.28.0",
    "seu-auth @ git+https://github.com/Golevka2001/SEU-Auth.git@0.1.0",
    "pyyaml>=6.0",
    "jsonpath-ng>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "openai>=2.30.0",
    "mcp>=1.27.0",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.27.2.2"]

[project.scripts]
campus = "cli_campus.main:app"
campus-mcp = "cli_campus.mcp_server:main"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pymupdf>=1.27.2.2",
]
scripts = [
    "rapidocr-onnxruntime>=1.4.4",
    "pillow>=12.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
